# x3-atomic-star

./: .gitignore  .gitmodules  00-START-HERE-MAINNET-READINESS.md  ADVANCED_TESTING_COMPLETE.md  ADVANCED_TESTING_INFRASTRUCTURE_SETUP.md  ADVANCED_TESTING_SETUP.md  AUDIT_FIXES_IMPLEMENTATION.md  AUDIT_FIXES_SESSION_SUMMARY.md  BLOCKER_DISCOVERY_QUICK_REFERENCE.md  BLOCKER_DISCOVERY_SESSION_REPORT.md  BLOCKER_DISCOVERY_SESSION_RESULTS.md  BLOCKER_FIX_VERIFICATION.md  BLOCKER_INVESTIGATION_GUIDE.md  CARGO_CRASH_BLOCKER.md  CNAME  COOL_FEATURES_DISCOVERED.md  CRITICAL_BLOCKERS_STATUS.md  CRITICAL_ISSUE_ROOT_CAUSE_AND_FIX.md  CURRENT_PROJECT_FEATURE_INVENTORY.md  Cargo.toml  ChatGPT.html  DASHBOARD_ANALYTICS_REPORT.md  DEEP_AUDIT_REPORT.md  DEPENDENCY_UPGRADE_FEASIBILITY_REPORT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SYNC_COMPLETE.md  DOCUMENTATION_UPDATE_CHECKLIST.md  ECONOMIC_ATTACK_TESTS_IMPLEMENTATION.md  FAILED_CHECKS.md  FASTEST_MAINNET_PLAN.md  FEATUREBUILTPROOF_DELIVERY.md  FEATURE_GAP_REPORT.md  FEATURE_REGISTRY.toml  FILE_INDEX.md  FINAL_AUDIT_REPORT.md  FINAL_BOSS_AUDIT.md  FINAL_DEEP_DIVE_SUMMARY.md  FINAL_DELIVERY_SUMMARY.md  FINAL_SESSION_SUMMARY_CHAIN_SPEC_FIXED.md  FORMAL_VERIFICATION_IMPLEMENTATION.md  (+140 more)
apps/atlas-sphere-clean/: .dockerignore  .env.apps.template  .env.example  .env.production  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .kilocodemodes  .pre-commit-config.yaml  .remarkignore  .roomodes  ACTION_PLAN.md  ATOMIC_CROSSVM_PRODUCTION_READINESS.md  AUDIT_COMPLETION_SUMMARY.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_FINDINGS.md  BLOCK_VISUALIZATION_GUIDE.md  BLOCK_VISUALIZATION_README.md  CHECKSUMS.sha256  CHECKSUMS.sha256.asc  CLI_FLAGS.md  COMMIT_MESSAGE_PHASE4.txt  COMPREHENSIVE_CROSS_VM_AUDIT.md  CONFIG.md  CRITICAL_ISSUES_VERIFICATION.md  Cargo.toml  DEBUG_MODE_FULL.py  DEEP_AUDIT_PROTOCOL.md  DELIVERY_SUMMARY.txt  DEPLOYMENT_STATUS_v1.1.md  DEPLOY_CHECKLIST.md  DEVELOPMENT.md  Dockerfile  GITHUB_RELEASE_TEMPLATE.md  HIGH_MEDIUM_ISSUES_AUDIT.md  INITIAL.md  INITIAL_X3.md  Makefile  NODE_REQUIREMENTS.md  (+86 more)
apps/atlas-sphere-clean/.agents/: phase6_scan.sh
apps/atlas-sphere-clean/.artifacts/: CHECKSUMS.sha256  P4_GPU_TEST_PHASE1_REPORT.md  P4_GPU_TEST_PHASE2_REPORT.md  apps-quality-baseline-after-phase2-fixwave.txt  apps-quality-baseline-after-phase2.txt  apps-quality-baseline-after.txt  apps-quality-baseline-cd.txt  apps-quality-baseline-final.txt  apps-quality-baseline.txt  apps-quality-final.txt  x3-feature-audit-report.md  x3-implementation-status.md  x3-test-coverage-matrix.md
apps/atlas-sphere-clean/.cargo/: audit.toml  config.toml
apps/atlas-sphere-clean/.claude/: settings.local.json
apps/atlas-sphere-clean/.githooks/: pre-commit
apps/atlas-sphere-clean/.github/: labeler.yml
apps/atlas-sphere-clean/.kilo/: kilo.json
apps/atlas-sphere-clean/.kilocode/: mcp.json  session-id
apps/atlas-sphere-clean/.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
apps/atlas-sphere-clean/.semgrep/: no-stubs-in-critical-crates.yml  python-opsec.yml
apps/atlas-sphere-clean/DEBIAN/: control  postinst  postrm
apps/atlas-sphere-clean/Hashlock - Audit Report_files/: 1069359574953210  1902-03bdeb73ff4af437.js  2057-2eb88923c7b043d8.js  2447-72c747c6800039b8.js  3051-ed2112c555b50abd.js  3133-a2ef47fa1fb75f56.js  3270-d9a63068240cca8b.js  3872-7e2f351dd34b4ddf.js  5384-053cac15767f9334.js  541-b4112b4c4ec60169.js  6203-3809dd2683d548c2.js  6886-8dfa9b898ba7f42f.js  7933-80dac9f98ac2d143.js  7d384bb9-254556af3feb96b5.js  b5e6d367fbf2fa5d.css  c9a4db690ed9f714.css  clerk.browser.js  eyJ0eXBlIjoicHJveHkiLCJzcmMiOiJodHRwczovL2ltYWdlcy5jbGVyay5kZXYvb2F1dGhfZ2l0aHViL2ltZ18zQkJMQmZjOEhXeEpGM2tVR0cxTk1ybzJzalYifQ  global-error-1d3e4fbff75902af.js  gtm.js  js  layout-2423e27a5ba2f187.js  main-app-2592666bbded26f7.js  page-53c0fd5719a59933.js  webpack-53abed9303619056.js
apps/atlas-sphere-clean/PRPs/: apps-folder-100-readiness.md  x3_node_startup_healthcheck_prp.md
apps/atlas-sphere-clean/TPS TESTING/: .gitignore  go.mod  tps_server.go
apps/atlas-sphere-clean/cross-chain-gpu-validator/: README.md  pyproject.toml  todo-tree-20260320-1040.txt
apps/atlas-sphere-clean/deployment/: build-release-bundle.sh  configure-firewall.sh  deploy-multi-server.sh  infrastructure-setup.sh  inventory.yaml
apps/atlas-sphere-clean/docs/: DOCUMENTATION_INDEX.md  README.md  roadmap.md
apps/atlas-sphere-clean/integration-tests/: parallel-proposer-integration.rs
apps/atlas-sphere-clean/node/: Cargo.toml
apps/atlas-sphere-clean/prompts/: x3_master_prompt.md  x3_master_prompt_copilot.md  x3_master_prompt_short.md
apps/atlas-sphere-clean/runtime/: Cargo.toml  build.rs
apps/atlas-sphere-clean/scripts/: deploy_dual_validator.sh  health-check.sh  run-validator.sh  start-beast.sh  x3_release_sign.sh
apps/atlas-sphere-clean/security/: audit-sdk.sh
apps/atlas-sphere-clean/services/: ccgv-validator.service  x3-intelligence.service
apps/atlas-sphere-clean/sql/: 02-funding-investors-dorks-schema.sql
apps/atlas-sphere-clean/tools/: fund_allocations.py  process_finalized_payouts.py  run_with_rtx2060.sh  ws_server.py  yolo_run.sh
apps/atlas-sphere-clean/x3-app-store/: .env.example  .gitignore  config.json  deploy-prod.sh  deploy.sh  deployment.yaml  docker-compose.dev.yml  docker-compose.prod.yml  health-check.sh  package.json  setup-dev.sh  start.sh
crates/cross-vm-bridge/: Cargo.toml
crates/x3-appzone-factory/: Cargo.toml
crates/x3-atomic-trade/: Cargo.toml
crates/x3-automation/: Cargo.toml
crates/x3-bridge/: Cargo.toml
crates/x3-parallel-executor/: Cargo.toml
crates/x3-pq/: Cargo.toml
crates/x3-swap-router/: Cargo.toml
crates/x3-vrf/: Cargo.toml
crates/x3-wallet/: Cargo.toml
crates/x3-wallet-cli/: Cargo.toml
pallets/cross-chain-validator/: Cargo.toml
pallets/x3-atomic-kernel/: Cargo.toml
pallets/x3-cross-vm-router/: Cargo.toml
pallets/x3-inventory/: Cargo.toml
pallets/x3-reservation/: Cargo.toml
pallets/x3-settlement-engine/: Cargo.toml
patches/frame-storage-access-test-runtime/: Cargo.toml  build.rs
(+1973 files in other folders)
