[workspace]
exclude = ["quantum-kernel-voyager/src-tauri", "apps/x3-desktop/src-tauri", "apps/inferstructor-dashboard/src-tauri"]
members = [
    "pallets/x3-kernel",
    "pallets/atomic-trade-engine",
    "pallets/governance",
    "pallets/treasury",
    "pallets/agent-accounts",
    "pallets/agent-memory",
    "pallets/svm-runtime",
    "pallets/evolution-core",
    "pallets/x3-verifier",
    "pallets/x3-domain-registry",
    "pallets/x3-settlement-engine",
    "pallets/meme-overlord",
    "pallets/swarm",
    "crates/evm-integration",
    "crates/svm-integration",
    "crates/svm-counter",
    "crates/cross-vm-bridge",
    "crates/external-chains",
    "crates/x3-bridge",
    "crates/x3-atomic-trade",
    "crates/x3-sdk",
    "crates/x3-cli",
    "crates/x3-wallet",
    "crates/x3-indexer",
    "crates/x3-gateway",
    "crates/x3-lsp",
    "crates/x3-integration",
    "crates/gpu-swarm",
    "crates/x3-gpu-validator-swarm",
    "crates/x3-sidecar",
    "crates/x3-evolution",
    "crates/quantum-swarm",
    "crates/chronos-flash",
    "crates/voice-to-x3",
    "crates/dream-mining",
    "crates/quantum-crypto",
    "crates/apotheosis-tx",
    "crates/tps-tracker",
    "runtime",
    "node",
    "apps/analytics/analytics-service",
    "crates/x3-common",
    "crates/x3-lexer",
    "crates/x3-ast",
    "crates/x3-parser",
    "crates/x3-hir",
    "crates/x3-mir",
    "crates/x3-semantics",
    "crates/x3-typeck",
    "crates/x3-backend",
    "crates/x3-vm",
    "crates/x3-opt",
    "crates/x3-bench",
    "crates/x3-compiler",
    "crates/x3-verifier",
    "crates/x3-dns-server",
    "crates/invariant-macros",
    "crates/x3-proof",
    "crates/x3-slash",
    "crates/x3-fees",
    "crates/x3-intent",
    "crates/x3-agent",
    "crates/x3-court",
    "crates/x3-flashloan",
    "crates/x3-dex",
    "crates/x3-swap-router",
    "pallets/depin-marketplace",
    "pallets/private-execution",
    "crates/contention-predictor",
    "crates/parallel-proposer",
    "crates/private-mempool",
    "crates/confidential-gpu",
    "crates/x3-bot",
    "crates/atomic-swap-orchestrator",
    "crates/x3-turbine",
    # Phase 3-6: Audit implementation — Flash Finality, PoH, Atomic Kernel, Parallel Proposer
    "crates/flash-finality",
    "crates/poh-generator",
    "pallets/x3-atomic-kernel",
    "pallets/x3-sequencer",
    "pallets/x3-da",
    "pallets/fraud-proofs",
    "crates/x3-atomic-client",
    "crates/cross-vm-coordinator",
    # vΩ-1.0 Master Architecture additions — constitutional engine, epoch proofs, launch validator
    "crates/x3-constitution",
    "crates/x3-launch-validator",
    # On-chain invariant enforcement pallet (Article IV / checklist §10)
    "pallets/x3-invariants",
    # Concrete implementations of x3-vm BalanceProvider + CrossVmEscrow for node use
    "crates/x3-bridge-adapters",
    "crates/cross-chain-position-manager",
    "crates/x3-rpc",
        # Phase 4.5: Liquidity, Inventory, and Solvency control plane
        # Note: crates/dylint-determinism is intentionally NOT listed here.
    # It is a standalone workspace (has its own [workspace] and rust-toolchain.toml)
    # compiled by `cargo dylint` with nightly+rustc-dev via workspace.metadata.dylint.
]
default-members = ["node"]
resolver = "2"

# Patch multiple crates to use wasm32-compatible versions:
# - ahash 0.8.11: uses getrandom 0.2 (instead of 0.3)
# - rustix 0.38.21: patched to use errno 0.2 (instead of 0.3)
# - tempfile 3.8.1: uses compatible rustix
# - errno 0.3.14: patched to provide stub implementation for wasm32
#[patch.crates-io]
#ahash = { path = "patches/ahash-local" }
#rustix = { path = "patches/rustix-local" }
#tempfile = { path = "patches/tempfile-local" }
#errno = { path = "patches/errno-local" }


# Unified Substrate patch block is defined further down in this file
# (auto-generated from cargo metadata). Removed earlier compact/duplicate
# patch entries to avoid duplicate-key errors; keep the comprehensive
# `[patch.crates-io]` block below which pins the workspace to rev 948fbd2.

[workspace.metadata.dylint]
libraries = [
    { path = "crates/dylint-determinism" },
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"

# SCALE codec & metadata (workspace shared deps)
[workspace.dependencies]
parity-scale-codec = { version = "3.6.5", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }
curve25519-dalek = "3.2.1"
hex = { version = "0.4.3", default-features = false }
uuid = { version = "1.8.0", features = ["v4"], default-features = false }
tracing = { version = "0.1.37", default-features = false }
anyhow = { version = "1.0", default-features = false }
tokio = { version = "1.0", features = ["full"], default-features = false }

# Common FRAME & Substrate workspace deps (referenced with `workspace = true` in members)
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
pallet-preimage = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-runtime-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false, features = ["disable_target_static_assertions"] }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sp-weights = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
log = { version = "0.4.20", default-features = false }
serde = { version = "1.0.195", features = ["derive"], default-features = false }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
pallet-staking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
pallet-offences = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }

# Substrate client (node) workspace deps used by `node` member
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sc-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sc-network-gossip = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512", default-features = false }

# Utilities
futures = "0.3.30"
hex-literal = "0.4.1"
once_cell = "1.19.0"
serde_json = "1.0.111"
thiserror = "1.0.51"

# X3 Chain new pallets & crates (DEPIN-GPU-001, EXEC-PREDICT-002, PRIV-ENCLAVE-003)
pallet-depin-marketplace = { path = "pallets/depin-marketplace", default-features = false }
pallet-private-execution = { path = "pallets/private-execution", default-features = false }
contention-predictor = { path = "crates/contention-predictor" }
private-mempool = { path = "crates/private-mempool" }
confidential-gpu = { path = "crates/confidential-gpu" }

# SputnikVM — no-std EVM interpreter (used by x3-evm-integration WASM path)
evm = { git = "https://github.com/rust-blockchain/evm", rev = "b7b82c7e1fc57b7449d6dfa6826600de37cc1e65", default-features = false }

# Frontier EVM dependencies for real EVM execution
pallet-evm = { git = "https://github.com/polkadot-evm/frontier", branch = "polkadot-v1.1.0", default-features = false }
pallet-ethereum = { git = "https://github.com/polkadot-evm/frontier", branch = "polkadot-v1.1.0", default-features = false }
pallet-base-fee = { git = "https://github.com/polkadot-evm/frontier", branch = "polkadot-v1.1.0", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/polkadot-evm/frontier", branch = "polkadot-v1.1.0", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/polkadot-evm/frontier", branch = "polkadot-v1.1.0", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/polkadot-evm/frontier", branch = "polkadot-v1.1.0", default-features = false }
fp-rpc = { git = "https://github.com/polkadot-evm/frontier", branch = "polkadot-v1.1.0", default-features = false }
fp-evm = { git = "https://github.com/polkadot-evm/frontier", branch = "polkadot-v1.1.0", default-features = false }
fp-self-contained = { git = "https://github.com/polkadot-evm/frontier", branch = "polkadot-v1.1.0", default-features = false }
fc-rpc = { git = "https://github.com/polkadot-evm/frontier", branch = "polkadot-v1.1.0", default-features = false }
fc-rpc-core = { git = "https://github.com/polkadot-evm/frontier", branch = "polkadot-v1.1.0", default-features = false }
fc-db = { git = "https://github.com/polkadot-evm/frontier", branch = "polkadot-v1.1.0", default-features = false }
fc-mapping-sync = { git = "https://github.com/polkadot-evm/frontier", branch = "polkadot-v1.1.0", default-features = false }
fc-storage = { git = "https://github.com/polkadot-evm/frontier", branch = "polkadot-v1.1.0", default-features = false }

# Solana BPF/SVM dependencies for real SVM execution
solana_rbpf = { version = "0.8", default-features = false }

# Align proc-macro2 across workspace to avoid cargo feature-resolution mismatches
proc-macro2 = { version = "1.0.103", features = ["span-locations"] }

# Force versions that use getrandom 0.2 (wasm32-compatible)
# Note: getrandom 0.2 doesn't exist in dependencies, but constraining these
# prevents newer versions from being pulled in
ahash = { version = "0.8.11" }
tempfile = { version = "3.8.1" }
# Pin base64ct to avoid edition2024 requirement in newer versions
base64ct = { version = "=1.6.0" }

# CLI & RPC ecosystem
clap = { version = "4.4.18", features = ["derive"] }
jsonrpsee = { version = "0.22.5", default-features = false, features = ["macros", "client", "server"] }

# Build profiles - reduce codegen-units to avoid LLVM SIGSEGV crashes in 1.85
[profile.release]
codegen-units = 1
lto = false
opt-level = 2

[profile.release.build-override]
opt-level = 1
codegen-units = 1

# [package.metadata.tarpaulin]
# run-types = ["Tests"]
# ignore-tests = []
# output-dir = "target/tarpaulin"

# [package.metadata.cargo-tarpaulin]
# fail-under = 80

# [package.metadata.cargo-tarpaulin.coverage]
# formats = ["Html", "Xml", "Json"]

# Patches for Substrate dependencies - using consistent git rev
[patch.crates-io]
# Fix environmental macro compatibility
environmental = { path = "patches/environmental" }

# Pin home to a rustc 1.85 compatible release (local patch).
home = { path = "patches/home" }
# Enable bulk-memory opcode parsing (0xFC prefix) so Substrate can deserialize rustc-generated WASM.
parity-wasm = { path = "patches/parity-wasm" }
# Make wasm-instrument compatible with bulk instructions when parity-wasm/bulk is enabled.
wasm-instrument = { path = "patches/wasm-instrument" }
# Fix substrate-prometheus-endpoint protobuf type mismatch (Vec -> RepeatedField)
substrate-prometheus-endpoint = { path = "patches/substrate-prometheus-endpoint" }
# Fix errno WASM compatibility by providing stub implementation for wasm32 targets
errno = { path = "patches/errno" }
# Pin ar_archive_writer to a rustc 1.85 compatible implementation.
# NOTE: currently unused in the active dependency graph.
# ar_archive_writer = { path = "patches/ar_archive_writer" }
# Fix getrandom for wasm32-unknown-unknown (Substrate WASM runtime)
getrandom = { path = "patches/getrandom" }
# core2 0.4.0 was yanked from crates.io; pin to local copy.
core2 = { path = "patches/core2" }
# Patch native crates that pulled getrandom 0.3/0.4 back down to 0.2.17
fastbloom = { path = "patches/fastbloom" }
jobserver = { path = "patches/jobserver" }
quinn-proto = { path = "patches/quinn-proto" }
rand_core = { path = "patches/rand_core" }
tempfile = { path = "patches/tempfile" }
uuid = { path = "patches/uuid" }
memfd = { path = "patches/memfd" }
# Fix ahash to use getrandom 0.2 instead of 0.3 (0.3 doesn't support wasm32-unknown-unknown)
ahash = { path = "patches/ahash" }
# Stub icu_properties to avoid rustc ICE on string literal unescaping
# The real icu_properties triggers a compiler panic in rustc 1.93+ when compiling with full workspace features
icu_properties = { path = "patches/icu_properties_stub" }
# Patch idna_adapter to work with our icu_properties_stub GeneralCategory newtype
idna_adapter = { path = "patches/idna_adapter" }
# Force sp-io to use patched Substrate git version (don't use crates.io 23.0.0 which lacks wasm support)
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }

# Experimental: attempt to unify `curve25519-dalek` across workspace to satisfy Solana and Substrate consumers
# REVERTED: workspace unification proved incompatible with pinned Substrate deps — keeping isolated SVM integration test instead
# (was: curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", tag = "3.2.1" })
# Also patch getrandom 0.1.16 to version alias - leave upstream (substrate uses it differently)
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
# sc-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
# NOTE: currently unused in the active dependency graph.
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
# Redirect crates.io sp-* references (pulled by Frontier/WASM build) to the git
# version so that workspace feature `disable_target_static_assertions` propagates
# and prevents host-target assert_eq_size!(usize, u32) failures on x86_64.
sp-runtime-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-externalities = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-wasm-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-debug-derive = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }

# Patch polkadot-sdk sources to use our substrate rev - comprehensive list
[patch."https://github.com/paritytech/polkadot-sdk"]
# Patch polkadot-sdk to the workspace Substrate rev. Feature flags are set on direct deps.
sp-runtime-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-externalities = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-weights = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }

# Patch Substrate git sources for prometheus fix and executor bulk-memory support
[patch."https://github.com/paritytech/substrate"]
substrate-prometheus-endpoint = { path = "patches/substrate-prometheus-endpoint" }
sc-executor = { path = "patches/sc-executor" }

# Patch Frontier (polkadot-evm) sp-io to match workspace version and avoid duplicate panic_impl
[patch."https://github.com/polkadot-evm/frontier"]
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2512" }
