[package]
name = "x3-cross-vm-bridge"
version = "0.1.0"
authors = ["X3 Chain Core Team <core@x3-chain.io>"]
description = "X3 Chain cross-VM bridge providing atomic dual-VM operation orchestration"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
parity-scale-codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sha2 = { version = "0.10", default-features = false }
blake3 = { version = "1.5", default-features = false }
log = { version = "0.4", default-features = false }

# For BLS signature verification
blst = { version = "0.3", features = ["parallel"], default-features = false }

# For ed25519 signature verification
ed25519-dalek = { version = "1.0", default-features = false, features = ["u64_backend"] }

# For LiveNodeDispatcher (std-only)
jsonrpsee = { version = "0.22", features = ["http-client"], optional = true }
hex = { version = "0.4", optional = true }
reqwest = { version = "0.11", features = ["blocking"], optional = true }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "blst/std",
    "jsonrpsee/std",
    "jsonrpsee/http-client",
    "hex",
    "reqwest",
]

[lib]
crate-type = ["rlib"]
