[package]
name = "x3-appzone-factory"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "X3 AppZone factory: template management, deployment registry, and CLI harness for deploying application zones on the X3 network."

[dependencies]
parity-scale-codec = { workspace = true, features = ["max-encoded-len"] }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
]

[dev-dependencies]
# No extra dev deps needed for this crate.
