[package]
name = "x3-atomic-trade"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
sp-std = { git = "https://github.com/paritytech/substrate", rev = "948fbd2" }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "sp-std/std",
]
