[package]
name = "x3-swap-router"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-std = { workspace = true }
frame-support = { workspace = true }
rand = "0.8"

[dev-dependencies]
proptest = "1.4"

[features]
default = ["std"]
std = [
    "sp-core/std",
    "sp-runtime/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-std/std",
    "frame-support/std",
]
