[package]
name = "x3-wallet-cli"
version = "0.1.0"
edition = "2021"
description = "X3 Wallet CLI - Command-line interface for wallet operations, multisig, and DEX swaps"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
colored = "2.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# RPC client dependencies
subxt = { version = "0.34", features = ["default"] }
sp-core = { version = "26", features = ["default"] }
sp-runtime = "26"

# Hardware wallet support
ledger-device-sdk = "0.1"
trezor-lib = "0.1"

# Crypto utilities
sp-keyring = "26"
sha2 = "0.10"
blake2 = "0.10"

[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"

[[bin]]
name = "x3-wallet"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
