[package]
name = "x3-wallet"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
sp-std = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false, features = ["std"] }
parking_lot = "0.12"
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
hex = { workspace = true }

[dev-dependencies]
