[package]
name = "pallet-cross-chain-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "948fbd2" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "948fbd2" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "948fbd2" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "948fbd2" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "948fbd2" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "948fbd2" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "948fbd2", optional = true }

[dev-dependencies]

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]

runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]

try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
