[package]
name = "pallet-x3-atomic-kernel"
version = "0.1.0"
edition = "2021"
description = "X3 Atomic Kernel pallet — bundle orchestration, lifecycle management, and PoAE proof anchoring to finality certificates"
license = "Apache-2.0"
authors = ["X3 Labs"]

[dependencies]
# FRAME
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
frame-system   = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-core       = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-runtime    = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-std        = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-io         = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-api        = { workspace = true, default-features = false }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", optional = true }
# Codec
parity-scale-codec = { version = "3", default-features = false, features = ["derive"] }
scale-info         = { version = "2", default-features = false, features = ["derive"] }
# Logging
log = { version = "0.4", default-features = false }

[dev-dependencies]
sp-io   = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
# Testing tools
proptest = "1.0"
loom = "0.7"


[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
    "sp-api/std",
    "log/std",
    "frame-benchmarking?/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
