[package]
name = "pallet-x3-cross-vm-router"
version = "0.1.0"
authors = ["X3 Chain Core Team <core@x3-chain.io>"]
description = "X3 Universal Asset Kernel — cross-VM transfer router. Enforces state machine, replay protection, expiry, and king invariant across X3Native/X3Evm/X3Svm."
edition = "2021"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
codec = { package = "parity-scale-codec", workspace = true, default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
serde = { workspace = true, optional = true, features = ["derive"] }

x3-asset-kernel-types = { path = "../../crates/x3-asset-kernel-types", default-features = false }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-api/std",
    "serde",
    "serde/std",
    "x3-asset-kernel-types/std",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]

[dev-dependencies]
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-x3-asset-registry = { path = "../x3-asset-registry" }
pallet-x3-supply-ledger = { path = "../x3-supply-ledger" }
